test/sema/assignment.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo() -> void {}

fn bar() -> i32 { return 1; }

fn main() -> void {
    let x: i32 = 1;

    // CHECK: [[# @LINE + 1 ]]:12: error: assigned value type 'void' doesn't match variable type 'i32'
    x = foo();

    let y: i32 = 3;
    
    y = 3;

    // CHECK: [[# @LINE + 1 ]]:5: error: expected to call function 'bar'
    bar = 3;

    // CHECK: [[# @LINE + 1 ]]:5: error: expected to call function 'foo'
    foo = 3;

    let z: i32;
    z = 3;
}

fn assignParam(x: i32) -> void {
    // CHECK: [[# @LINE + 1 ]]:7: error: 'x' cannot be mutated
    x = 1;
}
// CHECK-NOT: {{.*}}
